--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="header_logo">
       <a href="#">
-        <img src="/img/logo.png" class="logo-img" alt="website logo">
+        <img src="logo.png" class="logo-img" alt="website logo">
       </a>
     </div>
     <ul class="header_ul">
