--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="header_logo">
       <a href="#">
-        <img src="logo.png" class="logo-img" alt="website logo">
+        <img src="/img/logo.png" class="logo-img" alt="website logo">
       </a>
     </div>
     <ul class="header_ul">
@@ -54,7 +54,7 @@
    
     <div class="main_yogadescription">
       <div class="yogadescription_item1">
-        <a href="#"> <img src="z9 Feel-good-morning-yoga.jpg" alt="Feel-good-morning-yoga"></a>
+        <a href="#"> <img src="/img/z9 Feel-good-morning-yoga.jpg" alt="Feel-good-morning-yoga"></a>
         <button class="item1btn">
           <p>Vinayasa Flow</p>
         </button>
@@ -63,7 +63,7 @@
       </div>
 
       <div class="yogadescription_item2">
-        <a href="#"><img src="z2 Create-space-in-your-heart-1.jpg" alt="create space yoga in your heart"></a>
+        <a href="#"><img src="/img/z2 Create-space-in-your-heart-1.jpg" alt="create space yoga in your heart"></a>
         <button class="item2btn">
           <p>Vinayasa Flow</p>
         </button>
@@ -74,7 +74,7 @@
       </div>
 
       <div class="yogadescription_item3">
-        <a href="#"><img src="z25 Micro-yoga-nidra.jpg" alt="Micro-yoga-nidra"></a>
+        <a href="#"><img src="/img/z25 Micro-yoga-nidra.jpg" alt="Micro-yoga-nidra"></a>
         <button class="item3btn">
           <p>Yoga Nidra</p>
         </button>
@@ -109,7 +109,7 @@
 
       <section class="section1_cards">
         <div class="section1_card1">
-          <a href="#"><img src="z15 Feel-Good-Yoga-Challenge-EkhartYoga.jpg"
+          <a href="#"><img src="/img/z15 Feel-Good-Yoga-Challenge-EkhartYoga.jpg"
               alt="yoga Feel-Good-Yoga-Challenge-EkhartYoga"></a>
           <div class="card1_content">
             <h4>feel good yoga challenge</h4>
@@ -124,7 +124,7 @@
           </div> -->
         </div>
         <div class="section1_card2">
-          <a href="#"><img src="z22 just-yin-yoga-program-EkhartYoga.jpg" alt="just-yin-yoga-program-EkhartYoga"></a>
+          <a href="#"><img src="/img/z22 just-yin-yoga-program-EkhartYoga.jpg" alt="just-yin-yoga-program-EkhartYoga"></a>
           <div class="card2_content">
             <h4>feel good yoga challenge</h4>
             <span>30 days .</span>
@@ -138,7 +138,7 @@
           </div> -->
         </div>
         <div class="section1_card3">
-          <a href="#"><img src="z14 yoga-for-beginners-course-esther-ekhart-1.jpg"
+          <a href="#"><img src="/img/z14 yoga-for-beginners-course-esther-ekhart-1.jpg"
               alt="yoga-for-beginners-course-esther-ekhart-1"></a>
           <div class="card3_content">
             <h4>feel good yoga challenge</h4>
@@ -379,15 +379,15 @@
           personally answer all your class comments and questions.</p>
       </div>
       <div class="teachers-info">
-        <a href="#"><img src="z16 ester.webp" alt="yoga teacher"></a>
-        <a href="#"><img src="z4 David-Lurey-250.webp" alt="yoga teacher"></a>
-        <a href="#"><img src="z18 Helen-Noakes.webp" alt="yoga teacher"></a>
-        <a href="#"><img src="z20 Jose.webp" alt="yoga teacher"></a>
-        <a href="#"><img src="z5 Sandra-Carson-3.webp" alt="yoga teacher"></a>
-        <a href="#"><img src="z3 David-Kam.jpg" alt="yoga teacher"></a>
-        <a href="#"><img src="z21 Julie-Martin.webp" alt="yoga teacher"></a>
-        <a href="#"><img src="z8 Tashi800x800.webp" alt="yoga teacher"></a>
-        <a href="#" ><img src="z23 Laia-Bové.webp" alt="yoga teacher"></a>
+        <a href="#"><img src="/img/z16 ester.webp" alt="yoga teacher"></a>
+        <a href="#"><img src="/img/z4 David-Lurey-250.webp" alt="yoga teacher"></a>
+        <a href="#"><img src="/img/z18 Helen-Noakes.webp" alt="yoga teacher"></a>
+        <a href="#"><img src="/img/z20 Jose.webp" alt="yoga teacher"></a>
+        <a href="#"><img src="/img/z5 Sandra-Carson-3.webp" alt="yoga teacher"></a>
+        <a href="#"><img src="/img/z3 David-Kam.jpg" alt="yoga teacher"></a>
+        <a href="#"><img src="/img/z21 Julie-Martin.webp" alt="yoga teacher"></a>
+        <a href="#"><img src="/img/z8 Tashi800x800.webp" alt="yoga teacher"></a>
+        <a href="#" ><img src="/img/z23 Laia-Bové.webp" alt="yoga teacher"></a>
         <div class="last-item">
           <a href="#">
             <p>And many more...</p>
@@ -407,19 +407,19 @@
     </div>
     <div class="yoga-banner">
       <div class="yoga-banner1 display-none">
-        <img src="z13 yoga journal.webp" alt="yoga journal">
+        <img src="/img/z13 yoga journal.webp" alt="yoga journal">
       </div>
       <div class="yoga-banner2 display-none">
-        <img src="z10 The guardian.webp" alt="the guardian">
+        <img src="/img/z10 The guardian.webp" alt="the guardian">
       </div>
       <div class="yoga-banner3 display-none">
-        <img src="z12 women's health.webp" alt="the guardian">
+        <img src="/img/z12 women's health.webp" alt="the guardian">
       </div>
       <div class="yoga-banner4 ">
-        <img src="z26 new-york-times.webp" alt="new-york-times">
+        <img src="/img/z26 new-york-times.webp" alt="new-york-times">
       </div>
       <div class="yoga-banner5 display-none">
-        <img src="z19 in-the-moment.webp" alt="in in-the-moment ">
+        <img src="/img/z19 in-the-moment.webp" alt="in in-the-moment ">
       </div>
     </div>
     <div class="bgimg">
@@ -430,7 +430,7 @@
         <h2>Make yoga <br> part of your life</h2>
         <p>Sharing the love of yoga to create positive change in the world</p>
       </div>
-      <img src="z6 Sandra-Carson-EkhartYoga-banner.png" alt="Sandra-Carson-EkhartYoga-banner">
+      <img src="/img/z6 Sandra-Carson-EkhartYoga-banner.png" alt="Sandra-Carson-EkhartYoga-banner">
       <div class="make-yoga-partner_right-content">
         <button>
           <a href="#">Try us for free</a>
