remove unneccasary files

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 			referrerpolicy="no-referrer"
 		></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/gsap.js"></script>
+    <script src="gsap.js"></script>
   
 </body>
 </html>
